--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>Property Line Dector</h2>
+<h2>Property Line Detector</h2>
 <a href="Privacy_Policy.md">Privacy Policy</a>
 <a href="Terms & Conditions.md">Terms & Conditions</a>
 
